fix: improve contrast on button when used in a highlighted row

--- a/src/components/Table/TableRow/TableRow.scss
+++ b/src/components/Table/TableRow/TableRow.scss
@@ -37,8 +37,8 @@ $row-multiple-line-height: 64px;
             background-color: var(--color-accent_light40);
         }
 
-        .moonstone-icon {
-            fill: var(--color-light);
+        .moonstone-button:not(:hover, :focus) {
+            color: var(--color-light);
         }
     }
 
